--- a/composer.json
+++ b/composer.json
@@ -9,5 +9,8 @@
         }
     },
     "minimum-stability": "stable",
-    "require": {}
+    "require": {},
+    "bin": [
+        "virtiz-backup-cli"
+    ]
 }
